<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="16dp"
    tools:context="com.example.rubenbaghajyan.barcodescannertest.MainActivity">


    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/ic_hashtag"
        android:gravity="center"
        android:text="@string/hashtag_text_eng"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_scan"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/ic_hashtag"
        android:gravity="center"
        android:text="@string/hashtag_text_ru"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/ic_hashtag"
        android:gravity="center"
        android:text="@string/hashtag_text_арм"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_2" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="124dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:background="@drawable/scan_button_background"
        android:text="@string/gen_scan"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_3"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/scanner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_focuse"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/scan_to_find"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_scan" />

    <TextView
        android:id="@+id/scanner_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_focuse"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/scan_to_find"
        android:textColor="#ff0000"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanner_text" />

</android.support.constraint.ConstraintLayout>
